[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseroute-ai"
version = "0.1.0"
description = "Explainable NLP and geospatial triage for emergency reports"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
ml = ["scikit-learn>=1.3"]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

